--- a/.github/workflows/GitHubPages.yaml
+++ b/.github/workflows/GitHubPages.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          personal_token: ${{ secrets.TOKEN }}
+          personal_token: ${{ secrets.HUGO_DEPLOY_TOKEN }}
           external_repository: hermanp/hermanp.github.io
           publish_dir: ./public
           publish_branch: master
