--- a/.github/workflows/GitHubPages.yaml
+++ b/.github/workflows/GitHubPages.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
