--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -12,7 +12,7 @@
   [en.params]
     # Show a copyright license from creativecommons.org in the site footer?
     # Page specific copyright licenses are also possible by adding this option to a page's front matter.
-    copyright_license = {enable = true, allow_derivatives = true, share_alike = true, allow_commercial = true, notice = "This work is licensed under {license}"}
+    copyright_license = {enable = true, allow_derivatives = true, share_alike = true, allow_commercial = true, notice = "This work is licensed under {license}. Please, give feedback! It's good to know about its use."}
 
 # Uncomment the lines below to configure your website in a second language.
 [hu]
@@ -25,7 +25,8 @@
     description = "Herman Péter személyes honlapja"
     # Need to set it here. Surprisingly, it can be set by this way.
     # https://github.com/wowchemy/wowchemy-hugo-modules/issues/67#issuecomment-279551652
-    copyright_license = {enable = true, allow_derivatives = true, share_alike = true, allow_commercial = true, notice = "Az oldal a {license} liszensz hatálya alá tartozik."}
+    copyright_license = {enable = true, allow_derivatives = true, share_alike = true, allow_commercial = true, notice = "Az oldal a {license} liszensz hatálya alá tartozik. Kérlek, adj visszajelzést! Jó értesülni a felhasználásáról."}
+  
   # [[hu.menu.main]]
   #   name = "Rólam"
   #   url = "#about"
